[gd_scene load_steps=3 format=3 uid="uid://dovsbgskx8e4o"]

[ext_resource type="Script" path="res://main/generators/StartingArea.gd" id="1_70ae2"]
[ext_resource type="PackedScene" uid="uid://cqcbkh53cbjwd" path="res://main/components/player/PlayerCharacter.tscn" id="2_igj2l"]

[node name="Starting Area" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_70ae2")

[node name="BG" type="CanvasLayer" parent="."]
layer = 0

[node name="ColorRect" type="ColorRect" parent="BG"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0509804, 0.0509804, 0.0509804, 1)

[node name="FloorGroup" type="CanvasGroup" parent="."]
y_sort_enabled = true

[node name="DrawGroup" type="CanvasGroup" parent="."]
y_sort_enabled = true

[node name="PlayerCharacter" parent="DrawGroup" instance=ExtResource("2_igj2l")]
visible = false
position = Vector2(1120, 2048)
normalPosition = Vector2(35, 64)
